Renamed all Solar Assets to Solar Systems.

--- a/src/Web/SunNext.Web/Views/Home/About.cshtml
+++ b/src/Web/SunNext.Web/Views/Home/About.cshtml
@@ -26,7 +26,7 @@
         <div class="col-md-6">
             <h4 class="mb-3">🌞 Real-World Use Cases</h4>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">24/7 real-time monitoring of solar assets</li>
+                <li class="list-group-item">24/7 real-time monitoring of solar systems</li>
                 <li class="list-group-item">Battery charge/discharge optimization and health tracking</li>
                 <li class="list-group-item">Automated market operations on IBEX with AI trade signals</li>
                 <li class="list-group-item">Centralized management for distributed solar parks</li>
