--- a/src/Web/SunNext.Web/Views/Home/Index.cshtml
+++ b/src/Web/SunNext.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="text-center py-5">
     <h1 class="display-4">☀️ SunNext</h1>
     <p class="lead mb-4">Smart Solar Energy Optimization Platform for B2B Operators</p>
-    <a class="btn btn-primary btn-lg" asp-controller="SolarAsset" asp-action="All">View My Assets</a>
+    <a class="btn btn-primary btn-lg" asp-controller="SolarSystem" asp-action="All">View My Systems</a>
 </div>
 
 <hr />
