--- a/src/Web/SunNext.Web/Views/Market/_TradeTargetsTable.cshtml
+++ b/src/Web/SunNext.Web/Views/Market/_TradeTargetsTable.cshtml
@@ -4,7 +4,7 @@
     <table class="table table-dark table-hover align-middle mb-0">
         <thead>
         <tr>
-            <th>Asset</th>
+            <th>System</th>
             <th>Suggested Sell</th>
             <th>Your Sell</th>
             <th>Suggested Stop</th>
