--- a/src/Web/SunNext.Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_Layout.cshtml
@@ -29,12 +29,12 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
 
-    <meta name="description" content="SunNext - Advanced Solar Asset Management Platform">
+    <meta name="description" content="SunNext - Advanced Solar System Management Platform">
     <meta name="keywords" content="solar, energy, management, monitoring, renewable">
     <meta name="author" content="SunNext">
 
     <meta property="og:title" content="@ViewData["Title"] - @GlobalConstants.SystemName">
-    <meta property="og:description" content="Advanced Solar Asset Management Platform">
+    <meta property="og:description" content="Advanced Solar System Management Platform">
     <meta property="og:type" content="website">
     <meta property="og:url" content="@Context.Request.GetDisplayUrl()">
 
