--- a/src/Web/SunNext.Web/Views/Shared/_Navbar.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_Navbar.cshtml
@@ -29,11 +29,11 @@
                     {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" href="#" id="assetsDropdown" role="button" data-bs-toggle="dropdown">
-                                <i class="bi bi-hdd-stack me-1"></i> Assets
+                                <i class="bi bi-hdd-stack me-1"></i> Systems
                             </a>
                             <ul class="dropdown-menu bg-dark border-0 mt-1">
-                                <li><a class="dropdown-item text-white" asp-controller="SolarAsset" asp-action="All">🌆 My Assets</a></li>
-                                <li><a class="dropdown-item text-white" asp-controller="SolarAsset" asp-action="Create">➕ Add Asset</a></li>
+                                <li><a class="dropdown-item text-white" asp-controller="SolarSystem" asp-action="All">🌆 My Systems</a></li>
+                                <li><a class="dropdown-item text-white" asp-controller="SolarSystem" asp-action="Create">➕ Add System</a></li>
                             </ul>
                         </li>
 
