--- a/src/Web/SunNext.Web/Views/SolarSystem/Create.cshtml
+++ b/src/Web/SunNext.Web/Views/SolarSystem/Create.cshtml
@@ -1,12 +1,12 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model SunNext.Web.ViewModels.SolarAssets.SolarAssetFormModel
+@model SunNext.Web.ViewModels.SolarSystem.SolarSystemFormModel
 @{
-    ViewData["Title"] = "Create New Asset";
+    ViewData["Title"] = "Create New Solar System";
 }
 
 <div class="container py-5">
     <div class="glass-card p-4 shadow-lg">
-        <h2 class="text-center glow-text mb-4">⚡ Create New Solar Asset</h2>
+        <h2 class="text-center glow-text mb-4">⚡ Create New Solar System</h2>
 
         <partial name="_FormPartial" model="Model" />
     </div>
