--- a/src/Web/SunNext.Web/Views/SolarSystem/Details.cshtml
+++ b/src/Web/SunNext.Web/Views/SolarSystem/Details.cshtml
@@ -1,8 +1,8 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model SunNext.Web.ViewModels.SolarAssets.SolarAssetViewModel
+@model SunNext.Web.ViewModels.SolarSystem.SolarSystemViewModel
 
 @{
-    ViewData["Title"] = "Asset Details";
+    ViewData["Title"] = "System Details";
 }
 
 
@@ -25,10 +25,10 @@
     <!-- Action Buttons -->
     <div class="action-buttons fade-in">
         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-warning">
-            <i class="bi bi-pencil-square"></i> Edit Asset
+            <i class="bi bi-pencil-square"></i> Edit System
         </a>
         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
-            <i class="bi bi-trash"></i> Delete Asset
+            <i class="bi bi-trash"></i> Delete System
         </button>
     </div>
     
@@ -40,7 +40,7 @@
                 <i class="bi bi-lightning-charge"></i>
                 kW Power
                 <i class="bi bi-info-circle tooltip-icon" data-bs-toggle="tooltip"
-                   title="Maximum instantaneous output of the solar asset in kilowatts (kW)."></i>
+                   title="Maximum instantaneous output of the solar system in kilowatts (kW)."></i>
             </div>
         </div>
         <div class="metric-card">
