--- a/src/Web/SunNext.Web/Views/User/Admin/Users.cshtml
+++ b/src/Web/SunNext.Web/Views/User/Admin/Users.cshtml
@@ -25,7 +25,7 @@
                     <th>Full Name</th>
                     <th>Email</th>
                     <th>Role</th>
-                    <th>Assets</th>
+                    <th>Systems</th>
                     <th class="text-center">Actions</th>
                 </tr>
                 </thead>
